used posts view model for title

--- a/Source/Web/EngineOverflow.Web/Views/Home/Index.cshtml
+++ b/Source/Web/EngineOverflow.Web/Views/Home/Index.cshtml
@@ -1,8 +1,7 @@
-﻿@model IEnumerable<EngineOverflow.Data.Models.Post>
+﻿@model IEnumerable<EngineOverflow.Web.ViewModels.Home.IndexBlogPostViewModel>
 @{
     ViewBag.Title = "Home Page";
 }
-
 <div>
     @foreach (var post in Model)
     {
