--- a/Source/Web/EngineOverflow.Web/Views/Manage/ChangePassword.cshtml
+++ b/Source/Web/EngineOverflow.Web/Views/Manage/ChangePassword.cshtml
@@ -1,10 +1,8 @@
-﻿@model EngineOverflow.Web.Models.ChangePasswordViewModel
+﻿@model EngineOverflow.Web.ViewModels.Manage.ChangePasswordViewModel
 @{
     ViewBag.Title = "Change Password";
 }
-
 <h2>@ViewBag.Title.</h2>
-
 @using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
