--- a/Source/Web/EngineOverflow.Web/Views/Manage/SetPassword.cshtml
+++ b/Source/Web/EngineOverflow.Web/Views/Manage/SetPassword.cshtml
@@ -1,14 +1,12 @@
-﻿@model EngineOverflow.Web.Models.SetPasswordViewModel
+﻿@model EngineOverflow.Web.ViewModels.Manage.SetPasswordViewModel
 @{
     ViewBag.Title = "Create Password";
 }
-
 <h2>@ViewBag.Title.</h2>
 <p class="text-info">
     You do not have a local username/password for this site. Add a local
     account so you can log in without an external login.
 </p>
-
 @using (Html.BeginForm("SetPassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
