--- a/Source/Web/EngineOverflow.Web/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/Source/Web/EngineOverflow.Web/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,10 +1,9 @@
-﻿@model EngineOverflow.Web.Models.ExternalLoginConfirmationViewModel
+﻿@model EngineOverflow.Web.ViewModels.Account.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
 <h2>@ViewBag.Title.</h2>
 <h3>Associate your @ViewBag.LoginProvider account.</h3>
-
 @using (Html.BeginForm("ExternalLoginConfirmation", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
@@ -30,7 +29,6 @@
         </div>
     </div>
 }
-
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
