--- a/Source/Web/EngineOverflow.Web/Views/Account/ResetPassword.cshtml
+++ b/Source/Web/EngineOverflow.Web/Views/Account/ResetPassword.cshtml
@@ -1,10 +1,8 @@
-﻿@model EngineOverflow.Web.Models.ResetPasswordViewModel
+﻿@model EngineOverflow.Web.ViewModels.Account.ResetPasswordViewModel
 @{
     ViewBag.Title = "Reset password";
 }
-
 <h2>@ViewBag.Title.</h2>
-
 @using (Html.BeginForm("ResetPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
@@ -36,7 +34,6 @@
         </div>
     </div>
 }
-
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
