--- a/Source/Web/EngineOverflow.Web/Views/Account/SendCode.cshtml
+++ b/Source/Web/EngineOverflow.Web/Views/Account/SendCode.cshtml
@@ -1,11 +1,10 @@
-﻿@model EngineOverflow.Web.Models.SendCodeViewModel
+﻿@model EngineOverflow.Web.ViewModels.Account.SendCodeViewModel
 @{
     ViewBag.Title = "Send";
 }
-
 <h2>@ViewBag.Title.</h2>
-
-@using (Html.BeginForm("SendCode", "Account", new { ReturnUrl = Model.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" })) {
+@using (Html.BeginForm("SendCode", "Account", new { ReturnUrl = Model.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+{
     @Html.AntiForgeryToken()
     @Html.Hidden("rememberMe", @Model.RememberMe)
     <h4>Send verification code</h4>
@@ -18,7 +17,6 @@
         </div>
     </div>
 }
-
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
