--- a/Source/Web/EngineOverflow.Web/Views/Account/VerifyCode.cshtml
+++ b/Source/Web/EngineOverflow.Web/Views/Account/VerifyCode.cshtml
@@ -1,11 +1,10 @@
-﻿@model EngineOverflow.Web.Models.VerifyCodeViewModel
+﻿@model EngineOverflow.Web.ViewModels.Account.VerifyCodeViewModel
 @{
     ViewBag.Title = "Verify";
 }
-
 <h2>@ViewBag.Title.</h2>
-
-@using (Html.BeginForm("VerifyCode", "Account", new { ReturnUrl = Model.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" })) {
+@using (Html.BeginForm("VerifyCode", "Account", new { ReturnUrl = Model.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+{
     @Html.AntiForgeryToken()
     @Html.Hidden("provider", @Model.Provider)
     @Html.Hidden("rememberMe", @Model.RememberMe)
@@ -32,7 +31,6 @@
         </div>
     </div>
 }
-
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
