added exception string message

--- a/Source/Web/EngineOverflow.Web/Views/Account/Login.cshtml
+++ b/Source/Web/EngineOverflow.Web/Views/Account/Login.cshtml
@@ -1,5 +1,4 @@
-﻿@using EngineOverflow.Web.ViewModels.Account
-@model LoginViewModel
+﻿@model EngineOverflow.Web.ViewModels.Account.LoginViewModel
 @{
     ViewBag.Title = "Log in";
 }
