--- a/Source/Web/EngineOverflow.Web/Views/Questions/Ask.cshtml
+++ b/Source/Web/EngineOverflow.Web/Views/Questions/Ask.cshtml
@@ -4,12 +4,11 @@
 }
 
 <h1>@ViewBag.Title</h1>
+
 @using (Html.BeginForm("Ask", "Questions", FormMethod.Post, new { @class = "form-horizontal" }))
 {
     @Html.AntiForgeryToken()
-
     @Html.ValidationSummary("", new { @class = "text-danger" })
-
     <div class="form-group">
         @Html.LabelFor(model => model.Title, new { @class = "col-md-1 control-label" })
         <div class="col-md-11">
@@ -31,4 +30,8 @@
     <div class="form-group text-center">
         <input type="submit" value="Ask question" class="btn btn-primary btn-lg" />
     </div>
+}
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
 }
