--- a/Source/Web/EngineOverflow.Web/Views/Home/Index.cshtml
+++ b/Source/Web/EngineOverflow.Web/Views/Home/Index.cshtml
@@ -9,7 +9,7 @@
             <div class="col-md-1">
                 <div class="well text-center">
                     <div class="row">0</div>
-                    <div class="row">answers</div>
+                    <div class="row">votes</div>
                 </div>
             </div>
             <div class="col-md-1">
@@ -25,7 +25,7 @@
                     </h4>
                 </div>
                 <div class="row">
-                    <p>asked 35 minutes ago in Audi Engines by delyan (100 points)</p>
+                    <p>Asked at <i>@post.CreatedOn</i> by <b>@post.AuthorUserName</b></p>
                 </div>
                 <div class="row">
                     @foreach (var tag in post.Tags)
