--- a/Source/Web/EngineOverflow.Web/Views/Feedback/Create.cshtml
+++ b/Source/Web/EngineOverflow.Web/Views/Feedback/Create.cshtml
@@ -2,29 +2,21 @@
 @{
     ViewBag.Title = "Feedback form";
 }
-
 <h1>@ViewBag.Title</h1>
-
 @using (Html.BeginForm("Create", "Feedback", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
-        @Html.LabelFor(model => model.Title, new { @class = "col-md-1 control-label" })
-        <div class="col-md-11">
-            @Html.EditorFor(model => model.Title, new { placeholder = "What is your feedback about this question? Please, be specific!" })
+        <div class="col-md-11 col-md-offset-1">
+            @Html.EditorFor(model => model.Content)
         </div>
-    </div>
-
-    <div class="form-group">
-        @Html.EditorFor(model => model.Content)
     </div>
 
     <div class="form-group text-center">
         <input type="submit" value="Send feedback" class="btn btn-primary btn-lg" />
     </div>
 }
-
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
