--- a/Source/Web/EngineOverflow.Web/Views/Questions/Ask.cshtml
+++ b/Source/Web/EngineOverflow.Web/Views/Questions/Ask.cshtml
@@ -2,9 +2,7 @@
 @{
     ViewBag.Title = "Ask question";
 }
-
 <h1>@ViewBag.Title</h1>
-
 @using (Html.BeginForm("Ask", "Questions", FormMethod.Post, new { @class = "form-horizontal" }))
 {
     @Html.AntiForgeryToken()
@@ -17,7 +15,9 @@
     </div>
 
     <div class="form-group">
-        @Html.EditorFor(model => model.Content)
+        <div class="col-md-11 col-md-offset-1">
+            @Html.EditorFor(model => model.Content)
+        </div>
     </div>
 
     <div class="form-group">
@@ -31,7 +31,6 @@
         <input type="submit" value="Ask question" class="btn btn-primary btn-lg" />
     </div>
 }
-
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
