--- a/Source/Web/EngineOverflow.Web/Views/Home/Index.cshtml
+++ b/Source/Web/EngineOverflow.Web/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
             </div>
             <div class="col-md-1">
                 <div class="well text-center">
-                    <div class="row">0</div>
+                    <div class="row">@post.FeedbacksCount</div>
                     <div class="row">answers</div>
                 </div>
             </div>
