finished paging in one controller

--- a/Source/Web/EngineOverflow.Web/Views/Questions/PageableFeedbacks.cshtml
+++ b/Source/Web/EngineOverflow.Web/Views/Questions/PageableFeedbacks.cshtml
@@ -1,5 +1,4 @@
-﻿@model EngineOverflow.Web.ViewModels.PageableFeedbackList.FeedbackListViewModel
-
+﻿@model EngineOverflow.Web.ViewModels.Questions.FeedbackListViewModel
 @foreach (var feedback in Model.Feedbacks)
 {
     @Html.Raw(feedback.SanitizedContent)
@@ -8,13 +7,12 @@
     <p class="text-right">Asked at <i>@feedback.CreatedOn</i> by <b>@feedback.AuthorUserNameDisplay</b></p>
     <hr />
 }
-
 <nav>
     <ul class="pagination">
         @if (Model.CurrentPage > 1)
         {
             <li>
-                <a href="/questions/1/post-title-1?page=@(Model.CurrentPage - 1)" aria-label="Previous">
+                <a href="/questions/@Model.PostId/@Model.PostTitle?page=@(Model.CurrentPage - 1)" aria-label="Previous">
                     <span aria-hidden="true">&laquo;</span>
                 </a>
             </li>
@@ -28,13 +26,12 @@
                 className = "active";
             }
 
-            <li class="@className"><a href="/questions/1/post-title-1?page=@i">@i</a></li>
+            <li class="@className"><a href="/questions/@Model.PostId/@Model.PostTitle?page=@i">@i</a></li>
         }
-
         @if (Model.CurrentPage == Model.TotalPages)
         {
             <li>
-                <a href="/questions/1/post-title-1?page=@(Model.CurrentPage + 1)" aria-label="Next">
+                <a href="/questions/@Model.PostId/@Model.PostTitle?page=@(Model.CurrentPage + 1)" aria-label="Next">
                     <span aria-hidden="true">&raquo;</span>
                 </a>
             </li>
