--- a/Source/Web/EngineOverflow.Web/Views/Questions/PageableFeedbacks.cshtml
+++ b/Source/Web/EngineOverflow.Web/Views/Questions/PageableFeedbacks.cshtml
@@ -28,7 +28,7 @@
 
             <li class="@className"><a href="/questions/@Model.PostId/@Model.PostTitle?page=@i">@i</a></li>
         }
-        @if (Model.CurrentPage == Model.TotalPages)
+        @if (Model.CurrentPage < Model.TotalPages)
         {
             <li>
                 <a href="/questions/@Model.PostId/@Model.PostTitle?page=@(Model.CurrentPage + 1)" aria-label="Next">
