--- a/Source/Web/EngineOverflow.Web/Views/Questions/Display.cshtml
+++ b/Source/Web/EngineOverflow.Web/Views/Questions/Display.cshtml
@@ -4,9 +4,8 @@
     TempData["PostId"] = Model.Id;
 }
 <h1>@ViewBag.Title</h1>
-@Html.Raw(Model.Content)
+@Html.Raw(Model.SanitizedContent)
 <h4><b>@Model.FeedbacksCount Answers</b></h4>
 <hr />
-
 @Html.Partial("~/Views/Questions/PageableFeedbacks.cshtml", Model.FeedbackListViewModel)
 @Html.Partial("~/Views/Feedback/Create.cshtml", new EngineOverflow.Web.InputModels.Feedback.CreateInputModel())
