--- a/Source/Web/EngineOverflow.Web/Views/Home/Index.cshtml
+++ b/Source/Web/EngineOverflow.Web/Views/Home/Index.cshtml
@@ -9,8 +9,9 @@
         <div class="row">
             <div class="col-md-1">
                 <div class="well text-center">
-                    <div class="row">0</div>
-                    <div class="row">votes</div>
+                    <div class="row" data-action="up"><span class="glyphicon glyphicon-thumbs-up"></span></div>
+                    <div class="row">@post.VotesCount</div>
+                    <div class="row" data-action="down"><span class="glyphicon glyphicon-thumbs-down"></span></div>
                 </div>
             </div>
             <div class="col-md-1">
@@ -38,3 +39,8 @@
         </div>
     }
 </div>
+<style>
+    div[data-action="up"], div[data-action="down"] {
+        cursor: pointer;
+    }
+</style>
