--- a/Source/Web/EngineOverflow.Web/Views/Home/Index.cshtml
+++ b/Source/Web/EngineOverflow.Web/Views/Home/Index.cshtml
@@ -9,9 +9,18 @@
         <div class="row">
             <div class="col-md-1">
                 <div class="well text-center">
-                    <div class="row" data-id="@post.Id" data-action="up"><span class="glyphicon glyphicon-thumbs-up"></span></div>
                     <div class="row" data-id="@post.Id" data-action="votesCount">@post.VotesCount</div>
-                    <div class="row" data-id="@post.Id" data-action="down"><span class="glyphicon glyphicon-thumbs-down"></span></div>
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                        <div class="row">
+                            <span data-id="@post.Id" data-action="up" class="glyphicon glyphicon-thumbs-up"></span>
+                            <span data-id="@post.Id" data-action="down" class="glyphicon glyphicon-thumbs-down"></span>
+                        </div>
+                    }
+                    else
+                    {
+                        <div class="row">votes</div>
+                    }
                 </div>
             </div>
             <div class="col-md-1">
@@ -40,20 +49,31 @@
     }
 </div>
 <style>
-    div[data-action="up"], div[data-action="down"] {
+    span[data-action="up"], span[data-action="down"] {
         cursor: pointer;
+        padding: 5px;
     }
 </style>
 @section scripts {
     <script>
-        $("div[data-action='up']").click(function () {
+        $("span[data-action='up']").click(function () {
             var id = $(this).attr("data-id");
-            $.post("/Votes/Vote", { postId: id, voteType: 1 },
+            voteClick(id, 1);
+        });
+
+
+        $("span[data-action='down']").click(function () {
+            var id = $(this).attr("data-id");
+            voteClick(id, -1);
+        });
+
+        function voteClick(id, voteType) {
+            $.post("/Votes/Vote", { postId: id, voteType: voteType },
                 function (data) {
                     var newVotesCount = data.Count;
                     $("div[data-action='votesCount'][data-id='" + id + "']")
                         .html(newVotesCount);
-                })
-        });
+                });
+        }
     </script>
 }
