--- a/Source/Web/EngineOverflow.Web/Views/Questions/Ask.cshtml
+++ b/Source/Web/EngineOverflow.Web/Views/Questions/Ask.cshtml
@@ -23,7 +23,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.Tags, new { @class = "col-md-1 control-label" })
         <div class="col-md-11">
-            @Html.EditorFor(model => model.Tags, new { placeholder = "At least one tag such as (four-stroke-engine, gasoline, diesel), max 5 tags, separated by comma!" })
+            @Html.EditorFor(model => model.Tags, new { placeholder = "At least one tag such as (four-stroke-engine, gasoline, diesel), separated by comma!" })
         </div>
     </div>
 
