--- a/Source/Web/EngineOverflow.Web/Views/Questions/Display.cshtml
+++ b/Source/Web/EngineOverflow.Web/Views/Questions/Display.cshtml
@@ -88,9 +88,13 @@
         function voteClick(id, voteType) {
             $.post("/Votes/FeedbackVote", { feedbackId: id, voteType: voteType },
                 function (data) {
-                    var newVotesCount = data.Count;
-                    $("div[data-action='votesCount'][data-id='" + id + "']")
-                        .html(newVotesCount);
+                    if (data.Error) {
+                        alert(data.Error);
+                    } else {
+                        var newVotesCount = data.Count;
+                        $("div[data-action='votesCount'][data-id='" + id + "']")
+                            .html(newVotesCount);
+                    }
                 });
         }
     </script>
