--- a/Source/Web/EngineOverflow.Web/Views/Shared/_Layout.cshtml
+++ b/Source/Web/EngineOverflow.Web/Views/Shared/_Layout.cshtml
@@ -39,6 +39,7 @@
     </div>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/sweetalert")
     @RenderSection("scripts", required: false)
 </body>
 </html>
