--- a/Source/Web/EngineOverflow.Web/Views/Shared/_Layout.cshtml
+++ b/Source/Web/EngineOverflow.Web/Views/Shared/_Layout.cshtml
@@ -5,6 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Engine Overflow</title>
     @Styles.Render("~/Content/css")
+    <style>
+        .inner-addon {
+            top: 10px;
+        }
+
+            .inner-addon .glyphicon {
+                top: -2px;
+            }
+
+            .inner-addon input {
+                width: 300px;
+                max-width: 300px;
+            }
+    </style>
 </head>
 <body>
     <div class="navbar navbar-default">
@@ -22,21 +36,10 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Ask question", "Ask", "Questions")</li>
                 </ul>
-                @*<div class="nav navbar-nav">
-                        <input type="text" placeholder="Search by tags, separated by comma" style="width: 300px; max-width: 300px;">
-                        <span class="glyphicon glyphicon-search"></span>
-                    </div>*@
-
-                <div class="nav navbar-nav inner-addon left-addon" style="top: 10px;">
-                    <i class="glyphicon glyphicon-search" style="top: -2px;"></i>
-                    <input type="text" placeholder="Search by tags, separated by comma" style="width: 300px; max-width: 300px;" />
+                <div class="nav navbar-nav inner-addon left-addon">
+                    <i class="glyphicon glyphicon-search"></i>
+                    <input type="text" placeholder="Search by tags, separated by comma" />
                 </div>
-
-                @*<div class="search-container">
-                        <form id="search" action="/search" method="get" autocomplete="off">
-                            <input name="q" type="text" placeholder="Search Q&amp;A" value="" tabindex="1" autocomplete="off" maxlength="240" style="width: 194px; max-width: 194px;">
-                        </form>
-                    </div>*@
                 @Html.Partial("_LoginPartial")
             </div>
         </div>
