--- a/Source/Web/EngineOverflow.Web/Views/Shared/_Layout.cshtml
+++ b/Source/Web/EngineOverflow.Web/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
                 </ul>
                 <div class="nav navbar-nav inner-addon left-addon">
                     <i class="glyphicon glyphicon-search"></i>
-                    <input type="text" placeholder="Search by tags, separated by comma" />
+                    <input id="searchText" type="text" placeholder="Search by tags, separated by comma" />
                 </div>
                 @Html.Partial("_LoginPartial")
             </div>
@@ -59,5 +59,16 @@
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/sweetalert")
     @RenderSection("scripts", required: false)
+    <script>
+        function keypressHandler(e) {
+            if (e.which === 13) {
+                var tags = $('#searchText').val();
+                var url = '@Url.Action("Index", "Home", new { tags = "__tags__" })';
+                window.location.href = url.replace('__tags__', tags);
+            }
+        }
+
+        $('#searchText').keypress(keypressHandler);
+    </script>
 </body>
 </html>
