added some things to search

--- a/Source/Web/EngineOverflow.Web/Views/Shared/_Layout.cshtml
+++ b/Source/Web/EngineOverflow.Web/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
                 </ul>
                 <div class="nav navbar-nav inner-addon left-addon">
                     <i class="glyphicon glyphicon-search"></i>
-                    <input id="searchText" type="text" placeholder="Search by tags, separated by comma" />
+                    <input id="searchText" type="text" placeholder="Search by tags" />
                 </div>
                 @Html.Partial("_LoginPartial")
             </div>
